added background and list items to menu with animations

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
     <!-- slider -->
     <header>
       <div id="menu-bar">
+        <h1 class="nav-title">EXP|CON</h1>
         <div id="menu" onclick="onClickMenu()">
           <div id="bar1" class="bar"></div>
           <div id="bar2" class="bar"></div>
           <div id="bar3" class="bar"></div>
         </div>
+        <ul class="nav" id="nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
       </div>
+      <div class="menu-bg" id="menu-bg"></div>
       <div id="rgbKineticSlider" class="rgbKineticSlider"></div>
       <div class="slider-container">
         <h1 class="title">INTERACTIVE CONCERT EXPERIENCE</h1>
