--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="menu-red.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -15,9 +16,9 @@
   <body>
     <!-- slider -->
     <header>
-      <div id="menu-bar">
+      <div id="menu-bar" onclick="">
         <h1 class="nav-title">EXP|CON</h1>
-        <div id="menu" onclick="onClickMenu()">
+        <div id="menu">
           <div id="bar1" class="bar"></div>
           <div id="bar2" class="bar"></div>
           <div id="bar3" class="bar"></div>
@@ -57,7 +58,23 @@
     <script src="./headerSlider.js"></script>
     <script src="./hamburgerMenu.js"></script>
 
-    <div class="red-box"></div>
+    <div class="red-box">
+      <div id="menu-bar-red">
+        <h1 class="nav-title-red">EXP|CON</h1>
+        <div id="menu-red" onclick="onClickMenuRed()">
+          <div id="bar1-red" class="bar"></div>
+          <div id="bar2-red" class="bar"></div>
+          <div id="bar3-red" class="bar"></div>
+        </div>
+        <ul class="nav-red" id="nav-red">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="menu-bg-red" id="menu-bg-red"></div>
+
+    </div>
     <div class="yellow-box"></div>
     <div class="black-box"></div>
     <div class="skyblue-box"></div>
