added the red menu animations

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="menu-red.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./menu-red.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -60,16 +60,16 @@
 
     <div class="red-box">
       <div id="menu-bar-red">
-        <h1 class="nav-title-red">EXP|CON</h1>
+        <h1 class="nav-title-red" id="nav-title-red">EXP|CON</h1>
         <div id="menu-red" onclick="onClickMenuRed()">
-          <div id="bar1-red" class="bar"></div>
-          <div id="bar2-red" class="bar"></div>
-          <div id="bar3-red" class="bar"></div>
+          <div id="bar1-red" class="bar-red"></div>
+          <div id="bar2-red" class="bar-red"></div>
+          <div id="bar3-red" class="bar-red"></div>
         </div>
         <ul class="nav-red" id="nav-red">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="#">WHAT IS IT</a></li>
+          <li><a href="#">PERKS</a></li>
+          <li><a href="#">PRICING</a></li>
         </ul>
       </div>
       <div class="menu-bg-red" id="menu-bg-red"></div>
