added the yellow menu with animations

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./menu-red.css" />
+    <link rel="stylesheet" href="./menu-yellow.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
-    
+
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"> -->
   </head>
   <body>
@@ -73,9 +74,23 @@
         </ul>
       </div>
       <div class="menu-bg-red" id="menu-bg-red"></div>
-
     </div>
-    <div class="yellow-box"></div>
+    <div class="yellow-box">
+      <div id="menu-bar-yellow">
+        <h1 class="nav-title-yellow" id="nav-title-yellow">EXP|CON</h1>
+        <div id="menu-yellow" onclick="onClickMenuYellow()">
+          <div id="bar1-yellow" class="bar-yellow"></div>
+          <div id="bar2-yellow" class="bar-yellow"></div>
+          <div id="bar3-yellow" class="bar-yellow"></div>
+        </div>
+        <ul class="nav-yellow" id="nav-yellow">
+          <li><a href="#">WHAT IS IT</a></li>
+          <li><a href="#">PERKS</a></li>
+          <li><a href="#">PRICING</a></li>
+        </ul>
+      </div>
+      <div class="menu-bg-yellow" id="menu-bg-yellow"></div>
+    </div>
     <div class="black-box"></div>
     <div class="skyblue-box"></div>
     <div class="trynow-box"></div>
