added the black menu with animations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./menu-red.css" />
     <link rel="stylesheet" href="./menu-yellow.css" />
+    <link rel="stylesheet" href="./menu-black.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -92,6 +93,21 @@
       <div class="menu-bg-yellow" id="menu-bg-yellow"></div>
     </div>
     <div class="black-box"></div>
+    <div id="menu-bar-black">
+      <h1 class="nav-title-black" id="nav-title-black">EXP|CON</h1>
+      <div id="menu-black" onclick="onClickMenuBlack()">
+        <div id="bar1-black" class="bar-black"></div>
+        <div id="bar2-black" class="bar-black"></div>
+        <div id="bar3-black" class="bar-black"></div>
+      </div>
+      <ul class="nav-black" id="nav-black">
+        <li><a href="#">WHAT IS IT</a></li>
+        <li><a href="#">PERKS</a></li>
+        <li><a href="#">PRICING</a></li>
+      </ul>
+    </div>
+    <div class="menu-bg-black" id="menu-bg-black"></div>
+  </div>
     <div class="skyblue-box"></div>
     <div class="trynow-box"></div>
   </body>
