--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>EXP|CON</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./menu-red.css" />
     <link rel="stylesheet" href="./menu-yellow.css" />
     <link rel="stylesheet" href="./menu-black.css" />
+    <link rel="stylesheet" href="./menu-skyblue.css" />
+    <link rel="stylesheet" href="./menu-black2.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -108,8 +110,38 @@
     </div>
     <div class="menu-bg-black" id="menu-bg-black"></div>
   </div>
-    <div class="skyblue-box"></div>
-    <div class="trynow-box"></div>
+    <div class="skyblue-box">
+      <div id="menu-bar-skyblue">
+        <h1 class="nav-title-skyblue" id="nav-title-skyblue">EXP|CON</h1>
+        <div id="menu-skyblue" onclick="onClickMenuSkyblue()">
+          <div id="bar1-skyblue" class="bar-skyblue"></div>
+          <div id="bar2-skyblue" class="bar-skyblue"></div>
+          <div id="bar3-skyblue" class="bar-skyblue"></div>
+        </div>
+        <ul class="nav-skyblue" id="nav-skyblue">
+          <li><a href="#">WHAT IS IT</a></li>
+          <li><a href="#">PERKS</a></li>
+          <li><a href="#">PRICING</a></li>
+        </ul>
+      </div>
+      <div class="menu-bg-skyblue" id="menu-bg-skyblue"></div>
+    </div>
+    <div class="trynow-box">
+      <div id="menu-bar-black2">
+        <h1 class="nav-title-black2" id="nav-title-black2">EXP|CON</h1>
+        <div id="menu-black2" onclick="onClickMenuBlack2()">
+          <div id="bar1-black2" class="bar-black2"></div>
+          <div id="bar2-black2" class="bar-black2"></div>
+          <div id="bar3-black2" class="bar-black2"></div>
+        </div>
+        <ul class="nav-black2" id="nav-black2">
+          <li><a href="#">WHAT IS IT</a></li>
+          <li><a href="#">PERKS</a></li>
+          <li><a href="#">PRICING</a></li>
+        </ul>
+      </div>
+      <div class="menu-bg-black2" id="menu-bg-black2"></div>
+    </div>
   </body>
 
   <footer></footer>
