added the animated button with the color structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./menu-black.css" />
     <link rel="stylesheet" href="./menu-skyblue.css" />
     <link rel="stylesheet" href="./menu-black2.css" />
+    <link rel="stylesheet" href="./gradient-button.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -41,7 +42,9 @@
           experience your favourite artists like never before and from the
           comfort of your own home.
         </p>
-        <button class="button">Button</button>
+        <a href="#" class="btn-mix-noborder" data-text="color">color</a>
+
+        <!-- <button class="button">Button</button> -->
       </div>
     </header>
     <!-- slider nav -->
