--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           experience your favourite artists like never before and from the
           comfort of your own home.
         </p>
-        <a href="#" class="btn-mix-noborder" data-text="color">color</a>
+        <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW">TRI IT NOW</a>
 
         <!-- <button class="button">Button</button> -->
       </div>
@@ -50,12 +50,15 @@
     <!-- slider nav -->
     <nav>
       <!-- <a href="#" class="main-nav prev" data-nav="previous"> <img src="./img/white-button.png"> <span></span></a> -->
-      <a href="#" class="main-nav next" data-nav="next">
-        <i class="fas fa-circle"></i><span></span
-      ></a>
-      <a href="#" class="main-nav prev" data-nav="previous">
-        <i class="fas fa-circle"></i><span></span
-      ></a>
+      <div class="slider-navigation">
+
+        <a href="#" class="main-nav next" data-nav="next">
+          <i class="fas fa-circle"></i><span></span
+        ></a>
+        <a href="#" class="main-nav prev" data-nav="previous">
+          <i class="fas fa-circle"></i><span></span
+        ></a>
+      </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/gh/hmongouachon/rgbKineticSlider/js/libs/TweenMax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hmongouachon/rgbKineticSlider/js/libs/imagesLoaded.pkgd.min.js"></script>
