--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- slider -->
     <header>
-      <div id="menu-bar" onclick="">
+      <div id="menu-bar" onclick="onClickMenu()">
         <h1 class="nav-title">EXP|CON</h1>
         <div id="menu">
           <div id="bar1" class="bar"></div>
