added the content for the red box and styled the white buttons without the animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./menu-skyblue.css" />
     <link rel="stylesheet" href="./menu-black2.css" />
     <link rel="stylesheet" href="./gradient-button.css" />
+    <link rel="stylesheet" href="./white-button.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -67,6 +68,8 @@
     <script src="https://cdn.jsdelivr.net/gh/hmongouachon/rgbKineticSlider/js/rgbKineticSlider.js"></script>
     <script src="./headerSlider.js"></script>
     <script src="./hamburgerMenu.js"></script>
+    <script src="./white-button.js"></script>
+
 
     <div class="red-box">
       <div id="menu-bar-red">
@@ -83,6 +86,30 @@
         </ul>
       </div>
       <div class="menu-bg-red" id="menu-bg-red"></div>
+      <div class="red-box-content">
+        <div class="red-text">
+
+          <h1>SUPERIOR SOUND</h1>
+          <p>Experience live versions of your favourite songs</p>
+          <button class="white-button">
+            <span>
+            SEE DEMO
+          </span>
+        </button>
+        </div>
+        <div class="speakers">
+        
+          <img class="speaker"src="./img/speaker1.png">
+          <div class="right-speaker-container">
+            <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW">TRY IT NOW</a>
+            <img class="speaker"src="./img/speaker-flipped.png">
+            <div class="click-circle">
+              CLICK
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="yellow-box">
       <div id="menu-bar-yellow">
