got the right buttons on the top corner

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         
           <img class="speaker"src="./img/speaker1.png">
           <div class="right-speaker-container">
-            <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW">TRY IT NOW</a>
+            <a href="./pricing.html" class="white-button upper-corner" data-text="TRY IT NOW">TRY IT NOW</a>
             <img class="speaker"src="./img/speaker-flipped.png">
             <div class="click-circle">
               CLICK
@@ -151,7 +151,7 @@
         <div class="circle3"></div>
       </div>
       <div class="yellow-right-side">
-        <button href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW">TRY IT NOW</button>
+        <button href="./pricing.html" class="white-button" data-text="TRY IT NOW">TRY IT NOW</button>
 
         <h1>FRONT ROW SEATS</h1>
         <p>Experience concerts up close and personal</p>
