added contento for the black-box

--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
         <div class="circle3"></div>
       </div>
       <div class="yellow-right-side">
-        <button href="./pricing.html" class="white-button" data-text="TRY IT NOW">TRY IT NOW</button>
+        <div class="top-right-button">
+
+          <button href="./pricing.html" class="white-button" data-text="TRY IT NOW">TRY IT NOW</button>
+        </div>
 
         <h1>FRONT ROW SEATS</h1>
         <p>Experience concerts up close and personal</p>
@@ -161,21 +164,50 @@
       </div>
     </div>
     </div>
-    <div class="black-box"></div>
-    <div id="menu-bar-black">
-      <h1 class="nav-title-black" id="nav-title-black">EXP|CON</h1>
-      <div id="menu-black" onclick="onClickMenuBlack()">
-        <div id="bar1-black" class="bar-black"></div>
-        <div id="bar2-black" class="bar-black"></div>
-        <div id="bar3-black" class="bar-black"></div>
+    <div class="black-box">
+
+      <div id="menu-bar-black">
+        <h1 class="nav-title-black" id="nav-title-black">EXP|CON</h1>
+        <div id="menu-black" onclick="onClickMenuBlack()">
+          <div id="bar1-black" class="bar-black"></div>
+          <div id="bar2-black" class="bar-black"></div>
+          <div id="bar3-black" class="bar-black"></div>
+        </div>
+        <ul class="nav-black" id="nav-black">
+          <li><a href="#">WHAT IS IT</a></li>
+          <li><a href="#">PERKS</a></li>
+          <li><a href="#">PRICING</a></li>
+        </ul>
       </div>
-      <ul class="nav-black" id="nav-black">
-        <li><a href="#">WHAT IS IT</a></li>
-        <li><a href="#">PERKS</a></li>
-        <li><a href="#">PRICING</a></li>
-      </ul>
+      <div class="menu-bg-black" id="menu-bg-black"></div>
+    <div class="black-box-content">
+      <div class="button-div">
+
+        <button class="btn-mix-noborder" data-text="TRY NOW">TRY NOW</button>
+      </div>
+      <h1>PERKS</h1>
+      <div class="black-box-info">
+
+        <section class="red-left-side">
+          <div class="line-black-content"></div>
+          <h2>Subscription Payment Model</h2>
+          <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
+        </section>
+        <section class="cyan-center-side">
+          <div class="line-black-content"></div>
+          <h2>No Fee Cancelation Policy</h2>
+          <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
+        </section>
+        <section class="yellow-text-right-side">
+          <div class="line-black-content"></div>
+          <h2>Subscription Payment Model</h2>
+          <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
+        </section>
+      </div>
+      <div class="line"></div>
     </div>
-    <div class="menu-bg-black" id="menu-bg-black"></div>
+  </div>
+
   </div>
     <div class="skyblue-box">
       <div id="menu-bar-skyblue">
