added the lines to the black box

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="yellow-right-side">
         <div class="top-right-button">
 
-          <button href="./pricing.html" class="white-button" data-text="TRY IT NOW">TRY IT NOW</button>
+          <a href="./pricing.html" class="white-button" data-text="TRY IT NOW">TRY IT NOW</a>
         </div>
 
         <h1>FRONT ROW SEATS</h1>
@@ -183,23 +183,23 @@
     <div class="black-box-content">
       <div class="button-div">
 
-        <button class="btn-mix-noborder" data-text="TRY NOW">TRY NOW</button>
+        <a  href="./pricing.html" class="btn-mix-noborder" data-text="TRY NOW"></a>
       </div>
       <h1>PERKS</h1>
       <div class="black-box-info">
 
         <section class="red-left-side">
-          <div class="line-black-content"></div>
+          <div class="line-black-content-left-side"></div>
           <h2>Subscription Payment Model</h2>
           <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
         </section>
         <section class="cyan-center-side">
-          <div class="line-black-content"></div>
+          <div class="line-black-content-center-side"></div>
           <h2>No Fee Cancelation Policy</h2>
           <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
         </section>
         <section class="yellow-text-right-side">
-          <div class="line-black-content"></div>
+          <div class="line-black-content-right-side"></div>
           <h2>Subscription Payment Model</h2>
           <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
         </section>
