added the content for the blue-box

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <h2>Subscription Payment Model</h2>
           <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
         </section>
-      </div>
+      </div>  
       <div class="line"></div>
     </div>
   </div>
@@ -224,8 +224,50 @@
         </ul>
       </div>
       <div class="menu-bg-skyblue" id="menu-bg-skyblue"></div>
-  
-
+      <div class="skyblue-content">
+        <div class="left-side-skyblue">
+          <img class="top-speaker" src="./img/speaker1.png">
+          <img class="bottom-speaker" src="./img/speaker1.png">
+        </div>
+        <div class="right-side-skyblue">
+          <h1>REVIEWS</h1>
+          <section class="reviews">
+            <section class="review">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h2>ARTIST</h2>
+              <p>"Love it, it's the Best. I can't live without it!'</p>
+            </section>
+            <section class="review">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h2>PRODUCER</h2>
+              <p>"Love it, it's the Best. I can't live without it!'</p>
+            </section>
+            <section class="review">
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <h2>MUSIC FAN</h2>
+              <p>"Love it, it's the Best. I can't live without it!'</p>
+            </section>
+          </section>
+        </div>
+      </div>
     </div>
     <div class="trynow-box">
       <div id="menu-bar-black2">
