added the content for the trynow-box

--- a/index.html
+++ b/index.html
@@ -285,6 +285,16 @@
 
       </div>
       <div class="menu-bg-black2" id="menu-bg-black2"></div>
+      <div class="trynow-content">
+        <div class="right-side-trynow">
+          <h1>GET EXP|CON NOW</h1>
+          <p>Purchase and download the app.</p>
+        </div>
+        <div class="left-side-trynow">
+          <div class="trynow-button">
+            <a  href="./pricing.html" class="btn-mix-noborder" data-text="TRY NOW"></a>        </div>
+          </div>
+        </div>
     </div>
   </body>
 
