added the content to the footer

--- a/index.html
+++ b/index.html
@@ -298,5 +298,12 @@
     </div>
   </body>
 
-  <footer></footer>
+  <footer>
+    <div class="email">
+      <i class="fas fa-envelope"></i>
+      <p>support@experienceconcerts.co</p>
+    </div>
+    <h1>EXP|CON</h1>
+    <p>2019 @ All Rights Reserved | Speer Technologies Incorporated</p>
+  </footer>
 </html>
