added the styling for the left side of the top section of the pricing page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <link rel="stylesheet" href="./menu-black2.css" />
     <link rel="stylesheet" href="./gradient-button.css" />
     <link rel="stylesheet" href="./white-button.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"/>
 
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"> -->
   </head>
