--- a/pricing.html
+++ b/pricing.html
@@ -4,8 +4,145 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pricing</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./pricing-styles.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"/>
+
 </head>
 <body>
-  <h1>Pricing</h1>
+  <div class="pricing-top">
+    <div class="titles">
+
+      <h1>Pricing</h1>
+      <p>Test out our app today! Choose from three subscription based payment models.</p>
+    </div>
+    <div class="pricing-models">
+      <div class="pricing-model">
+        <h2 class="left">BASIC</h2>
+        <div class="pricing-line-left"></div>
+        <h2 class="left">MONTHLY</h2>
+        <h3 class="left">$9</h3>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Very good</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Amazing</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Perfect job</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Love this</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>It's so good</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Features</p>
+        </div>
+        <button class="pricing-select-button-left">SELECT</button>
+      </div>
+      <div class="pricing-model center">
+        <h2>ADVANCED</h2>
+        <div class="pricing-line"></div>
+        <h2>YEARLY</h2>
+        <h3>$99</h3>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Very very good</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Even Amazing</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Perfect job</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Love this more</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>It's so so good</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>More Features</p>
+        </div>
+        <button class="pricing-select-button">SELECT</button>
+      </div>
+      <div class="pricing-model right">
+        <h2>PRO</h2>
+        <div class="pricing-line"></div>
+        <h2>YEARLY</h2>
+        <h3>$120</h3>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Very good</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Even more</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Perfect job</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>Love this more</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>It's so so good</p>
+        </div>
+        <div class="pricing-details">
+          <i class="fas fa-music"></i>
+          <p>More Features</p>
+        </div>
+        <button class="pricing-select-button">SELECT</button>
+      </div>
+    </div>
+  </div>
+  <div class="pricing-bottom">
+    <div class="pricing-bottom-content">
+      <h1>PERKS</h1>
+      <div class="perks-line"></div>
+      <div class="perks-box-info">
+
+        <section class="left-side">
+          <div class="line-perks-content"></div>
+          <h2>Subscription Payment Model</h2>
+          <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
+        </section>
+        <section class="center-side">
+          <div class="line-perks-content"></div>
+          <h2>No Fee Cancelation Policy</h2>
+          <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
+        </section>
+        <section class="text-right-side">
+          <div class="line-perks-content"></div>
+          <h2>Subscription Payment Model</h2>
+          <p>No commitment. Cancel anytime. Never worry about forgetting a payment again!</p>
+        </section>
+      </div>  
+    </div>
+  </div>
 </body>
+<footer>
+  <div class="email">
+    <i class="fas fa-envelope"></i>
+    <p>support@experienceconcerts.co</p>
+  </div>
+  <h1>EXP|CON</h1>
+  <p>2019 @ All Rights Reserved | Speer Technologies Incorporated</p>
+</footer>
 </html>
