added the styling for the center and right side of pricing table

--- a/pricing.html
+++ b/pricing.html
@@ -48,11 +48,11 @@
         </div>
         <button class="pricing-select-button-left">SELECT</button>
       </div>
-      <div class="pricing-model center">
-        <h2>ADVANCED</h2>
-        <div class="pricing-line"></div>
-        <h2>YEARLY</h2>
-        <h3>$99</h3>
+      <div class="pricing-model">
+        <h2 class="center">ADVANCED</h2>
+        <div class="pricing-line-center"></div>
+        <h2 class="center">YEARLY</h2>
+        <h3 class="center">$99</h3>
         <div class="pricing-details">
           <i class="fas fa-music"></i>
           <p>Very very good</p>
@@ -77,13 +77,13 @@
           <i class="fas fa-music"></i>
           <p>More Features</p>
         </div>
-        <button class="pricing-select-button">SELECT</button>
+        <button class="pricing-select-button-center">SELECT</button>
       </div>
-      <div class="pricing-model right">
-        <h2>PRO</h2>
-        <div class="pricing-line"></div>
-        <h2>YEARLY</h2>
-        <h3>$120</h3>
+      <div class="pricing-model">
+        <h2 class="right">PRO</h2>
+        <div class="pricing-line-right"></div>
+        <h2 class="right">YEARLY</h2>
+        <h3 class="right">$120</h3>
         <div class="pricing-details">
           <i class="fas fa-music"></i>
           <p>Very good</p>
@@ -108,7 +108,7 @@
           <i class="fas fa-music"></i>
           <p>More Features</p>
         </div>
-        <button class="pricing-select-button">SELECT</button>
+        <button class="pricing-select-button-right">SELECT</button>
       </div>
     </div>
   </div>
