made first titles black to be more visible

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="slider-container">
         <h1 class="title">INTERACTIVE CONCERT EXPERIENCE</h1>
         <p class="subtitle">
-          experience your favourite artists like never before and from the
+          Experience your favourite artists like never before and from the
           comfort of your own home.
         </p>
         <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW">TRI IT NOW</a>
