added the images to the circles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- slider -->
     <header>
       <div id="menu-bar" onclick="onClickMenu()">
-        <h1 class="nav-title">EXP|CON</h1>
+        <h1><a class="nav-title" href="#">EXP|CON</a></h1>
         <div id="menu">
           <div id="bar1" class="bar"></div>
           <div id="bar2" class="bar"></div>
@@ -66,11 +66,12 @@
     <script src="./headerSlider.js"></script>
     <script src="./hamburgerMenu.js"></script>
     <script src="./white-button.js"></script>
+    <script src="./jq"></script>
 
 
     <div class="red-box">
       <div id="menu-bar-red">
-        <h1 class="nav-title-red" id="nav-title-red">EXP|CON</h1>
+        <h1><a class="nav-title-red" href="#">EXP|CON</a></h1>
         <div id="menu-red" onclick="onClickMenuRed()">
           <div id="bar1-red" class="bar-red"></div>
           <div id="bar2-red" class="bar-red"></div>
@@ -143,7 +144,10 @@
     <div class="yellow-text">
       
       <div class="yellow-left-side">
-        <div class="circle1"></div>
+        <div class="circle1">
+          <!-- <img class="clip-image1" alt="" src="img/liveconcert2.jpg"> -->
+        </div>
+
         <div class="circle2"></div>
         <div class="circle3"></div>
       </div>
