first trial for hover effect

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <script src="./headerSlider.js"></script>
     <script src="./hamburgerMenu.js"></script>
     <script src="./white-button.js"></script>
-    <script src="./jq"></script>
+    <script src="./jquery-3.1.1.min.js"></script>
+    <script src="./hoverOverEffect.js"></script>
 
 
     <div class="red-box">
@@ -142,7 +143,10 @@
       <div class="menu-bg-yellow" id="menu-bg-yellow"></div>
     </div>
     <div class="yellow-text">
-      
+      <div class="mouse_area_wrap">
+        <div class="mouse_hover_area"></div>
+        <div class="mouse"></div>
+      </div>
       <div class="yellow-left-side">
         <div class="circle1">
           <!-- <img class="clip-image1" alt="" src="img/liveconcert2.jpg"> -->
