added working hover over effect

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
     <script src="./headerSlider.js"></script>
     <script src="./hamburgerMenu.js"></script>
     <script src="./white-button.js"></script>
-    <script src="./jquery-3.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./hoverOverEffect.js"></script>
+
 
 
     <div class="red-box">
