--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <script src="./white-button.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./hoverOverEffect.js"></script>
+    <!-- <script src="./jquery-3.1.1.min.js"></script> -->
 
 
 
