--- a/pricing.html
+++ b/pricing.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="./menu-black.css" />
   <link rel="stylesheet" href="./menu-red-pricing.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"/>
-  <script src="./hamburgerMenu.js"></script>
+
 </head>
 <body>
   <div id="menu-bar-black">
-    <h1 class="nav-title-black" id="nav-title-black">EXP|CON</h1>
+    <h1><a class="nav-title-black" href="./index.html">EXP|CON</a></h1>
     <div id="menu-black" onclick="onClickMenuBlack()">
       <div id="bar1-black" class="bar-black"></div>
       <div id="bar2-black" class="bar-black"></div>
@@ -62,7 +62,9 @@
           <i class="fas fa-music"></i>
           <p>Features</p>
         </div>
-        <button class="pricing-select-button-left">SELECT</button>
+        <a href="./payments.html" class="pricing-select-button-left" data-text="TRY IT NOW">SELECT</a>
+
+        <!-- <button class="pricing-select-button-left">SELECT</button> -->
       </div>
       <div class="pricing-model">
         <h2 class="center">ADVANCED</h2>
@@ -93,7 +95,7 @@
           <i class="fas fa-music"></i>
           <p>More Features</p>
         </div>
-        <button class="pricing-select-button-center">SELECT</button>
+        <a href="./payments.html" class="pricing-select-button-center" data-text="TRY IT NOW">SELECT</a>
       </div>
       <div class="pricing-model">
         <h2 class="right">PRO</h2>
@@ -124,13 +126,13 @@
           <i class="fas fa-music"></i>
           <p>More Features</p>
         </div>
-        <button class="pricing-select-button-right">SELECT</button>
+        <a href="./payments.html" class="pricing-select-button-right" data-text="TRY IT NOW">SELECT</a>
       </div>
     </div>
   </div>
   <div class="pricing-bottom">
     <div id="menu-bar-red">
-      <h1 class="nav-title-red" id="nav-title-red">EXP|CON</h1>
+      <h1><a class="nav-title-red" href="./index.html">EXP|CON</a></h1>
       <div id="menu-red" onclick="onClickMenuRed()">
         <div id="bar1-red" class="bar-red"></div>
         <div id="bar2-red" class="bar-red"></div>
@@ -165,6 +167,7 @@
       </div>  
     </div>
   </div>
+  <script src="./hamburgerMenu.js"></script>
 </body>
 <footer>
   <div class="email">
