added interval between images

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <nav>
       <div class="slider-navigation">
 
-        <a href="#" class="main-nav next" data-nav="next">
-          <i class="fas fa-circle"></i><span></span
+        <a href="#" class="main-nav next" id="slider-next12" data-nav="next">
+          <i  class="fas fa-circle"></i><span></span
         ></a>
         <a href="#" class="main-nav prev" data-nav="previous">
           <i class="fas fa-circle"></i><span></span
