fixed styling on all the buttons of home page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Experience your favourite artists like never before and from the
           comfort of your own home.
         </p>
-        <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW"><span>TRI IT NOW</span></a>
+        <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW"><span>TRY IT NOW</span></a>
 
       </div>
     </header>
@@ -207,9 +207,9 @@
     </div>
     <div class="menu-bg-black" id="menu-bg-black"></div>
   <div class="black-box-content">
-    <div class="button-div">
-      <a  href="./pricing.html" class="btn-mix-noborder" data-text="TRY NOW"><span>TRY IT NOW</span></a>
-    </div>
+    <!-- <div class="button-div"> -->
+      <a  href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOW"><span>TRY IT NOW</span></a>
+    <!-- </div> -->
     <h1>PERKS</h1>
     <div class="black-box-info">
 
@@ -231,8 +231,8 @@
     </div>  
     <div class="line"></div>
   </div>
-</div>
-    <div class="skyblue-box">
+  </div>
+  <div class="skyblue-box">
       <div id="menu-bar-skyblue">
         <h1 class="nav-title-skyblue" id="nav-title-skyblue">EXP|CON</h1>
         <div id="menu-skyblue" onclick="onClickMenuSkyblue()">
@@ -291,7 +291,7 @@
           </section>
         </div>
       </div>
-    </div>
+  </div>
     <div class="trynow-box">
       <div id="menu-bar-black2">
         <h1 class="nav-title-black2" id="nav-title-black2">EXP|CON</h1>
@@ -309,15 +309,12 @@
       </div>
       <div class="menu-bg-black2" id="menu-bg-black2"></div>
       <div class="trynow-content">
-        <div class="right-side-trynow">
+        <div class="left-side-trynow">
           <h1>GET EXP|CON NOW</h1>
           <p>Purchase and download the app.</p>
         </div>
-        <div class="left-side-trynow">
-          <div class="trynow-button">
-            <a  href="./pricing.html" class="btn-mix-noborder" data-text="TRY NOW"></a>        </div>
-          </div>
-        </div>
+      
+          <a href="./pricing.html" class="btn-mix-noborder" data-text="TRY IT NOT"><span>TRY IT NOW</span></a>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/hmongouachon/rgbKineticSlider/js/libs/TweenMax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hmongouachon/rgbKineticSlider/js/libs/imagesLoaded.pkgd.min.js"></script>
