fixed styling on pricing and payments page

--- a/payments.html
+++ b/payments.html
@@ -118,11 +118,11 @@
         </div>
         <p class="terms">By continuing, I acknowledge that I've read and agreed to the
         <a href="#">Terms of Service</a> & <a href="#">Privacy Policy</a></p>
-       <div class="button-div">
-         <a href="" class="btn-mix-noborder" data-text="Download" onclick="document.getElementById('myform').submit()"></a>
-        </div>
-
-      </form>
+       <!-- <div class="button-div"> -->
+         <!-- </div> -->
+         
+        </form>
+        <a href="" id="on-pricing" class="btn-mix-noborder" data-text="Download" onclick="document.getElementById('myform').submit()"><span>Download</span></a>
    
     </div>
     <script src="./hamburgerMenu.js"></script>
