--- a/payments.html
+++ b/payments.html
@@ -126,6 +126,7 @@
    
     </div>
     <script src="./hamburgerMenu.js"></script>
+    <script src="./payments.js"></script>
   </body>
   <footer>
     <div class="email">
