added the disabled button to the payments page and functionality

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <div id="bar3" class="bar"></div>
         </div>
         <ul class="nav" id="nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="#">WHAT IS IT</a></li>
+          <li><a href="#">PERKS</a></li>
+          <li><a href="#">PRICING</a></li>
         </ul>
       </div>
       <div class="menu-bg" id="menu-bg"></div>
