--- a/payments.html
+++ b/payments.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./gradient-button.css" />
     <link rel="stylesheet" href="./menu-white.css" />
 
-
     <title>PAYMENT</title>
   </head>
   <body>
@@ -28,42 +27,65 @@
         </ul>
       </div>
       <div class="menu-bg-white" id="menu-bg-white"></div>
-      <form id="myform">
-      <h1>PAYMENT</h1>
-      <h2>1. Select your plan</h2>
-      <div class="plan-selection">
-        <input
-          type="checkbox"
-          id="select-basic"
-          name="select-basic"
-          value="Basic"
-        />
-        <label class="select-basic" for="select-basic">BASIC</label>
-        <input
-          type="checkbox"
-          id="select-advanced"
-          name="select-advanced"
-          value="Advanced"
-        />
-        <label class="select-advanced" for="select-basic">ADVANCED</label>
-        <input type="checkbox" id="select-pro" name="select-pro" value="Pro" />
-        <label class="select-pro" for="select-pro">PRO</label>
-      </div>
+      <form id="myform" onchange="checkform(this)">
+        <h1>PAYMENT</h1>
+        <h2>1. Select your plan</h2>
+        <div class="plan-selection">
+          <input
+            type="checkbox"
+            id="select-basic"
+            name="select-basic"
+            value="Basic"
+          />
+          <label class="select-basic" for="select-basic">BASIC</label>
+          <input
+            type="checkbox"
+            id="select-advanced"
+            name="select-advanced"
+            value="Advanced"
+          />
+          <label class="select-advanced" for="select-basic">ADVANCED</label>
+          <input
+            type="checkbox"
+            id="select-pro"
+            name="select-pro"
+            value="Pro"
+          />
+          <label class="select-pro" for="select-pro">PRO</label>
+        </div>
         <div class="billing-and-credit-info">
           <div class="billing-info">
             <h2>2. Billing Information</h2>
             <label for="full-name">Full Name</label>
-            <input class="input-class" type="text" id="full-name" name="full-name" />
+            <input
+              required
+              class="input-class"
+              type="text"
+              id="full-name"
+              name="full-name"
+            />
             <label for="billing-address">Billing Address</label>
-            <input type="text" class="input-class" id="billing-address" name="billing-address" />
+            <input
+              required
+              type="text"
+              class="input-class"
+              id="billing-address"
+              name="billing-address"
+            />
             <div class="city-postal-code">
               <div class="city">
                 <label for="city">City</label>
-                <input type="text" class="input-class" id="city" name="city" />
+                <input required type="text" class="input-class" id="city" name="city" />
               </div>
               <div class="postal">
                 <label for="postal">Postal Code</label>
-                <input type="text" id="postal" class="input-class" name="postal" />
+                <input
+                required
+                  type="text"
+                  id="postal"
+                  class="input-class"
+                  name="postal"
+                />
               </div>
             </div>
             <label>Country</label>
@@ -77,12 +99,23 @@
           <div class="credit-info">
             <h2>3. Credit Card Information</h2>
             <label for="cardholder-name"><p>Cardholder's Name</p></label>
-            <input type="text" class="input-class" id="cardholder-name" name="cardholder-name" />
+            <input
+              required
+              type="text"
+              class="input-class"
+              id="cardholder-name"
+              name="cardholder-name"
+            />
             <label for="card-number"><p>Card Number</p></label>
-            <input type="text" class="input-class" id="card-number" name="card-number" />
+            <input
+              required
+              type="text"
+              class="input-class"
+              id="card-number"
+              name="card-number"
+            />
             <div class="month-year">
               <div class="month">
-
                 <label><p>Expiry Month</p></label>
                 <select class="input-class" id="expiry-month" placeholder="">
                   <option value="1">January</option>
@@ -100,7 +133,6 @@
                 </select>
               </div>
               <div class="year">
-
                 <label><p>Expiry Year</p></label>
                 <select class="input-class" id="expiry-Year">
                   <option value="2021">2021</option>
@@ -112,21 +144,33 @@
               </div>
             </div>
             <label for="cvv"><p>CVV</p></label>
-            <input  class="input-class" type="text" id="cvv" name="cvv" />
-
+            <input required class="input-class" type="text" id="cvv" name="cvv" />
           </div>
         </div>
-        <p class="terms">By continuing, I acknowledge that I've read and agreed to the
-        <a href="#">Terms of Service</a> & <a href="#">Privacy Policy</a></p>
-       <!-- <div class="button-div"> -->
-         <!-- </div> -->
-         
-        </form>
-        <a href="" id="on-pricing" class="btn-mix-noborder" data-text="Download" onclick="document.getElementById('myform').submit()"><span>Download</span></a>
-   
+        <p class="terms">
+          By continuing, I acknowledge that I've read and agreed to the
+          <a href="#">Terms of Service</a> & <a href="#">Privacy Policy</a>
+        </p>
+        <!-- <div class="button-div"> -->
+        <!-- </div> -->
+      </form>
+      <button id="disabled" disabled>
+        <a href=""  class="disabled" data-text="Download"
+          ><span>Download</span></a
+        >
+      </button>
+      <a
+        href=""
+        id="on-pricing"
+        class="btn-mix-noborder"
+        data-text="Download"
+        onclick="document.getElementById('myform').submit()"
+        ><span>Download</span></a
+      >
     </div>
     <script src="./hamburgerMenu.js"></script>
     <script src="./payments.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
   <footer>
     <div class="email">
